--- a/PuertoAndes/.classpath
+++ b/PuertoAndes/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 8.x Runtime"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container/REST"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
