--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 *.class
-
+/PuertoAndes/docs/*
+/PuertoAndes/docs/*/
+!/PuertoAndes/docs/specs
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
