--- a/PuertoAndes/.classpath
+++ b/PuertoAndes/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container/REST"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="lib/javax.servlet.jar"/>
+	<classpathentry kind="lib" path="lib/javax.ws.rs.jar"/>
+	<classpathentry kind="lib" path="lib/javax.websocket-api-1.0-rc4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
