--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.class
 /PuertoAndes/docs/*
 /PuertoAndes/docs/*/
-!/PuertoAndes/docs/specs
+!/PuertoAndes/docs/specs/
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 # Package Files #
